# JobScraper

./: .Dockerignore  .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: config.py  crud.py  db.py  jobs.csv  logging_config.py  main.py  models.py  schemas.py  scraper.py
docs/: dockerhub-readme.md  openapi.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_create_jobs_table.py  0002_add_is_remote_and_applied_columns.py  0003_make_company_nullable.py
tests/: test_smoke.py
